Grab the lists and cards up front--honestly probably a bad idea in the long run but it works for now

--- a/public/templates/board.dust
+++ b/public/templates/board.dust
@@ -4,5 +4,11 @@
     <h1>
         Viewing: <a href="{shortUrl}">{name}</a>
     </h1>
+    <p>
+        There are {numLists} lists.
+    </p>
+    <p>
+        There are {numCards} cards.
+    </p>
 {/body}
 
