adding a simple filter to see the number of items in the first list. Showing the basic building blocks of where we are going

--- a/public/templates/board.dust
+++ b/public/templates/board.dust
@@ -10,5 +10,8 @@
     <p>
         There are {numCards} cards.
     </p>
+    <p>
+        The first list has {numCardsInFirstList} cards.
+    </p>
 {/body}
 
